<resources>
    <string name="app_name">GrillTimer</string>
    <string name="timer_name">Name</string>
    <string name="timer_time">Time</string>
    <string name="timer_active">Active</string>
    <string name="timer_repeating">Wiederholung</string>
    <string name="new_timer_title">Neuer Timer</string>
    <string name="time_seperator">:</string>
    <string name="time_init">00</string>
    <string name="time_finished">BITTE WENDEN</string>
    <string name="timer_cancel">Cancel</string>
</resources>
