<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/start_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_timer_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp">
            </TextView>

            <TextView
                android:id="@+id/text_view_timer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/start_layout"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp">

            <Switch
                android:id="@+id/switch_timer_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/timer_repeating" />

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>